yoshimi 2.3.3.1 M


Resolved further MasterUI/VectorUI inconsistencies.

2024-11-13 Will
bn 2367
Further work on interaction between MasterUI and VectorUI.
    Still a few anomalies regarding number of parts :(

2024-11-12 Will
bn 2366
Added formal method of testing CCs against known ones.
Enabled reading vector X & Y features as groups.
Resolved 2 overlooked direct calls in VectorUI.
Updated HTML Control Data.

2024-11-10 Will
bn 2365
Implimented new part control to discover active engines.
    Used by VectorUI, PartUI, Master()
VectorUI no longer makes direct calls into the synth.
Updated HTML Control Data

Established full sync between Main window and Vectors.

2024-11-8 Will
bn 2364
BugFix: Main and Panel windows getting out of sync.
Removed GUI 'active part' and instead kept npart in sync.
    Mostly in sync now, but Vector control not correct.

2024-11-6 Will
bn 2363
Minor doc updates.

2024-11-2 Will
bn 2363
Parts only respond to MIDI CC input if enabled.
    However the MIDI GUI may still respond as it is set at
    channel level before part selection.
Ensure manual search gets most recent version.
Doc Updates


2024-10-1 Will
bn 2362
Created 'non-install_README' and 'copydocs.sh' to give
self-builders wanting to run without installing the means
to get docs and banks in a place Yoshimi can find them.

2024-10-10 Will
bn 2361
Commented out manual search in 'home' directory.

2024-9-25 Will + Hermann
bn 2360
Included bugfixes from Hermann.
Corrected some minor doc typos.
Set bugfix release version 2.3.3.1

2024-9-23
bn 2359
Final testing and doc updates
Set release version 2.3.3

2024-9-21 Will + Hermann
bn 2358
Initial preparations for release.
BugFix: init audio/midi device names before opening the backend.
Set version as 2.3.3 rc3

2024-9-20 Will
bn 2357
BugFix: Not honouring last seen mixer panel format.
Further updates to mixer panel control.
Set version as 2.3.3 rc2

2024-9-19 Will
bn 2356
Revised panel window control, reinstating link between MasterUI