@@ -296,6 +296,19 @@
         <td>msg No.</td>
         <td>Does not change actual directory contents<br>ret. value = 255 -- not found</td>
       </tr>
+      <tr>
+        <td>refreshDefaults</td>
+        <td>ret. 0,1</td>
+        <td>37</td>
+        <td>244</td>
+        <td>0~127</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>msg No.</td>
+        <td>Used for reporting whether bank structure has been seen - Read Only</td>
+      </tr>
     </tbody>
   </table>
 </body>
